--- a/mzc/templates/contact.html
+++ b/mzc/templates/contact.html
@@ -1,12 +1,31 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
-    <h1>contact page</h1>
-</body>
-</html>
+
+    {% extends 'base.html' %}
+
+    {% block mycontent %}
+    <div class="container">
+            <div class="row">
+                <div class="col col-12 col-sm-6 col-md-4">
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatem, quisquam suscipit nobis eaque laborum libero excepturi iure provident architecto, veritatis natus dolores ducimus laboriosam illum a perferendis quas qui quidem.
+                </div>
+                <div class="col col-12 col-sm-6 col-md-8">
+                        <table class="table">
+                                <tr>
+                                    <td>student name</td>
+                                    <td> <input type="text" class="form-control"></td>
+                                </tr>
+                                <tr>
+                                        <td>roll no</td>
+                                        <td> <input type="text" class="form-control"></td>    
+                                </tr>
+                                <tr>
+                                        <td>admission no</td>
+                                        <td> <input type="text" class="form-control"></td>
+                                </tr>
+                                <tr>
+                                    <td><button class="btn btn-success">submit</button></td>
+                                </tr>
+                            </table>
+                </div>
+            </div>
+        </div>
+    {% endblock %}
