--- a/mzc/templates/index.html
+++ b/mzc/templates/index.html
@@ -1,30 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
+
+        
+    {% extends 'base.html' %}
+
+    {% block mycontent %}
     <h1>mount zion college</h1>
     <table class="table">
         <tr>
             <td>student name</td>
-            <td> <input type="text"></td>
+            <td> <input type="text" class="form-control"></td>
         </tr>
         <tr>
                 <td>roll no</td>
-                <td> <input type="text"></td>    
+                <td> <input type="text" class="form-control"></td>    
         </tr>
         <tr>
                 <td>admission no</td>
-                <td> <input type="text"></td>
+                <td> <input type="text" class="form-control"></td>
         </tr>
         <tr>
             <td><button class="btn btn-success">submit</button></td>
         </tr>
     </table>
-</body>
-</html>
+
+    {% endblock %}
