--- a/mzc/templates/base.html
+++ b/mzc/templates/base.html
@@ -19,7 +19,9 @@
                   <li class="nav-item">
                     <a class="nav-link" href="/contacts">contact</a>
                   </li>
-                  
+                  <li class="nav-item">
+                        <a class="nav-link" href="/faculty">faculty</a>
+                      </li>
                 </ul>
               </nav>
               {% block mycontent %}
